Util: Fix a null-pointer issue when attempting to delete a key

--- a/CHANGES
+++ b/CHANGES
@@ -42,6 +42,7 @@ Bugfixes:
  - Debugger: Fix boundary conditions in tab completion
  - Video: Fix an issue with very long filenames
  - SDL: Fix boundary conditions for joystick adjustments
+ - Util: Fix a null-pointer issue when attempting to delete a key
 Misc:
  - Qt: Show multiplayer numbers in window title
  - Qt: Handle saving input settings better
