--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@ Features:
  - Remappable controls for tilt and gyroscope sensors
  - Status messages for actions taken while a game is running (e.g. save/load state)
  - Memory inspector
+ - Screensaver can now be suspended while a game is running
 Bugfixes:
  - GBA: Fix timers not updating timing when writing to only the reload register
  - All: Fix sanitize-deb script not cleaning up after itself
