--- a/CHANGES
+++ b/CHANGES
@@ -30,6 +30,7 @@ Bugfixes:
  - GBA: Handle out-of-bounds I/O access
  - GBA: Fix bounds-checking on EEPROM access
  - ARM7: Make illegal instruction decoding consistent between ARM and Thumb
+ - GBA BIOS: Initialize a variable that may be uninitialized in very rare cases
 Misc:
  - Qt: Show multiplayer numbers in window title
  - Qt: Solar sensor can have shortcuts set
