--- a/CHANGES
+++ b/CHANGES
@@ -31,6 +31,7 @@ Bugfixes:
  - GBA: Fix bounds-checking on EEPROM access
  - ARM7: Make illegal instruction decoding consistent between ARM and Thumb
  - GBA BIOS: Initialize a variable that may be uninitialized in very rare cases
+ - ARM7: Fix ARM multiply instructions when PC is a destination register
 Misc:
  - Qt: Show multiplayer numbers in window title
  - Qt: Solar sensor can have shortcuts set
