SDL: Fix potential build issues when Qt and SDL2 are in use

--- a/CHANGES
+++ b/CHANGES
@@ -51,6 +51,7 @@ Bugfixes:
  - ARM7: Make illegal instruction decoding consistent between ARM and Thumb
  - GBA BIOS: Initialize a variable that may be uninitialized in very rare cases
  - ARM7: Fix ARM multiply instructions when PC is a destination register
+ - SDL: Fix potential build issues when Qt and SDL2 are in use
 Misc:
  - Qt: Show multiplayer numbers in window title
  - Qt: Handle saving input settings better
