All: Add --help flag for command line programs

--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@ Misc:
  - All: Fix sanitize-deb script to set file permissions properly if run as (fake)root
  - All: Enable static linking for Windows
  - All: Enable static linking for OS X
+ - All: Add --help flag for command line programs
 
 0.2.1: (2015-05-13)
 Bugfixes:
