--- a/CHANGES
+++ b/CHANGES
@@ -55,6 +55,7 @@ Bugfixes:
  - GBA Memory: Fix jumping to invalid memory when switching from Thumb to ARM
  - GBA Video: Fix second frame mode 5
  - Perf: Fix race condition if a game crashes immediately on start
+ - All: Fix dependencies for libavcodec on Debian-derived platforms
 Misc:
  - Qt: Show multiplayer numbers in window title
  - Qt: Handle saving input settings better
