--- a/CHANGES
+++ b/CHANGES
@@ -25,6 +25,7 @@ Bugfixes:
  - Video: Fix an issue with very long filenames
  - GBA Video: Blended sprites should never have other effects applied
  - GBA: Fix crash if a 512kb flash save is loaded when a game has a 1Mb flash override
+ - Qt: Better cleanup when a game crashes
 Misc:
  - Qt: Handle saving input settings better
  - Debugger: Free watchpoints in addition to breakpoints
