GBA: GBARewind now returns how many states it has rewound

--- a/CHANGES
+++ b/CHANGES
@@ -40,6 +40,7 @@ Misc:
  - Qt: Show version info in window title
  - All: Fix sanitize-deb script to set file permissions properly if run as (fake)root
  - GBA SIO: Add a dummy driver for Normal mode
+ - GBA: GBARewind now returns how many states it has rewound
 
 0.2.1: (2015-05-13)
 Bugfixes:
