--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@ Bugfixes:
 Misc:
  - All: Fix sanitize-deb script to set file permissions properly if run as (fake)root
  - All: Enable static linking for Windows
+ - All: Enable static linking for OS X
 
 0.2.1: (2015-05-13)
 Bugfixes:
