--- a/CHANGES
+++ b/CHANGES
@@ -44,6 +44,7 @@ Misc:
  - GBA SIO: Add a dummy driver for Normal mode
  - GBA: GBARewind now returns how many states it has rewound
  - All: Enable static linking for Windows
+ - All: Enable static linking for OS X
 
 0.2.1: (2015-05-13)
 Bugfixes:
