--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,7 @@ Misc:
  - All: Add --help flag for command line programs
  - Qt: Show version info in window title
  - Qt: Migrate multiplayer window handling into GBAApp
+ - Qt: Unified file opening and saving with last location
 
 0.2.1: (2015-05-13)
 Bugfixes:
