--- a/CHANGES
+++ b/CHANGES
@@ -47,6 +47,7 @@ Misc:
  - All: Enable static linking for Windows
  - All: Enable static linking for OS X
  - Qt: Migrate multiplayer window handling into GBAApp
+ - Qt: Unified file opening and saving with last location
 
 0.2.1: (2015-05-13)
 Bugfixes:
