--- a/CHANGES
+++ b/CHANGES
@@ -48,6 +48,7 @@ Misc:
  - All: Enable static linking for OS X
  - Qt: Migrate multiplayer window handling into GBAApp
  - Qt: Unified file opening and saving with last location
+ - Qt: Fix windows being resizable when they shouldn't have been
 
 0.2.1: (2015-05-13)
 Bugfixes:
