--- a/CHANGES
+++ b/CHANGES
@@ -50,6 +50,7 @@ Misc:
  - Qt: Migrate multiplayer window handling into GBAApp
  - Qt: Unified file opening and saving with last location
  - Qt: Fix windows being resizable when they shouldn't have been
+ - Qt: Only hide cursor in full screen
 
 0.2.1: (2015-05-13)
 Bugfixes:
