GBA: Cap audio FIFO read size during deserialization

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ Bugfixes:
  - Qt: Better cleanup when a game crashes
  - Qt: Fix open ROM dialog filtering for archive formats
  - ARM7: Fix Thumb MUL timing
+ - GBA: Cap audio FIFO read size during deserialization
 Misc:
  - All: Fix sanitize-deb script to set file permissions properly if run as (fake)root
  - All: Enable static linking for Windows
