--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,7 @@ Bugfixes:
  - Qt: Fix maximum year in sensor override
  - GBA: Cap audio FIFO read size during deserialization
  - GBA: Check for corrupted savestates when loading
+ - GBA: Check for improperly sized savestates when loading
 Misc:
  - Qt: Handle saving input settings better
  - Debugger: Free watchpoints in addition to breakpoints
