--- a/CHANGES
+++ b/CHANGES
@@ -55,6 +55,7 @@ Misc:
  - Qt: Fix windows being resizable when they shouldn't have been
  - Qt: Only hide cursor in full screen
  - Perf: Ability to load savestates immediately on launch
+ - Qt: Replace pause-after-frame mutex with an atomic
 
 0.2.1: (2015-05-13)
 Bugfixes:
