GBA: Check for savestates made from differently sized ROMs

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@ Bugfixes:
  - GBA: Cap audio FIFO read size during deserialization
  - GBA: Check for corrupted savestates when loading
  - GBA: Check for improperly sized savestates when loading
+ - GBA: Check for savestates made from differently sized ROMs
 Misc:
  - All: Fix sanitize-deb script to set file permissions properly if run as (fake)root
  - All: Enable static linking for Windows
