GBA Video: Fix out-of-bounds tiles in mosaic

--- a/CHANGES
+++ b/CHANGES
@@ -37,6 +37,7 @@ Bugfixes:
  - GBA: Check for corrupted savestates when loading
  - GBA: Check for improperly sized savestates when loading
  - GBA: Check for savestates made from differently sized ROMs
+ - GBA Video: Fix out-of-bounds tiles in mosaic
 Misc:
  - Qt: Handle saving input settings better
  - Debugger: Free watchpoints in addition to breakpoints
