--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@ Bugfixes:
  - GBA: Check for corrupted savestates when loading
  - GBA: Check for improperly sized savestates when loading
  - GBA: Check for savestates made from differently sized ROMs
+ - GBA Video: Fix out-of-bounds tiles in mosaic
 Misc:
  - All: Fix sanitize-deb script to set file permissions properly if run as (fake)root
  - All: Enable static linking for Windows
