--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@ Features:
  - Ability to cap fast forward speed
  - Finer control over FPS target
  - Holdable shortcut for rewinding one frame at a time
+ - Ability to boot directly into the BIOS
 Bugfixes:
  - ARM7: Fix SWI and IRQ timings
  - GBA Audio: Force audio FIFOs to 32-bit
