--- a/CHANGES
+++ b/CHANGES
@@ -62,6 +62,7 @@ Misc:
  - Perf: Ability to load savestates immediately on launch
  - Qt: Replace pause-after-frame mutex with an atomic
  - Util: Allow disabling the threading code entirely
+ - GBA: SIO logging layer
 
 0.2.1: (2015-05-13)
 Bugfixes:
