--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@ Misc:
  - Qt: Show version info in window title
  - Qt: Migrate multiplayer window handling into GBAApp
  - Qt: Unified file opening and saving with last location
+ - Qt: Add application icon and XDG desktop files
 
 0.2.1: (2015-05-13)
 Bugfixes:
