SDL: Fix SDL build when OpenGL is missing

--- a/CHANGES
+++ b/CHANGES
@@ -41,6 +41,7 @@ Bugfixes:
  - GBA Video: Fix out-of-bounds tiles in mosaic
  - GBA Memory: Fix potential DMA issue when loading a savestate
  - GBA Audio: Fix audio pitch changing when adjusting buffer size
+ - SDL: Fix SDL build when OpenGL is missing
 Misc:
  - Qt: Handle saving input settings better
  - Debugger: Free watchpoints in addition to breakpoints
