--- a/CHANGES
+++ b/CHANGES
@@ -66,6 +66,7 @@ Misc:
  - GBA: SIO logging layer
  - Qt: Add application icon and XDG desktop files
  - GBA Thread: Split GBASync into a separate file
+ - SDL: Properly check for initialization
 
 0.2.1: (2015-05-13)
 Bugfixes:
