SDL: Clean up initialization functions

--- a/CHANGES
+++ b/CHANGES
@@ -67,6 +67,7 @@ Misc:
  - Qt: Add application icon and XDG desktop files
  - GBA Thread: Split GBASync into a separate file
  - SDL: Properly check for initialization
+ - SDL: Clean up initialization functions
 
 0.2.1: (2015-05-13)
 Bugfixes:
