Qt: Rename "Fullscreen" to "Toggle fullscreen"

--- a/CHANGES
+++ b/CHANGES
@@ -70,6 +70,7 @@ Misc:
  - SDL: Properly check for initialization
  - SDL: Clean up initialization functions
  - All: Threads are now named
+ - Qt: Rename "Fullscreen" to "Toggle fullscreen"
 
 0.2.1: (2015-05-13)
 Bugfixes:
