GBA Video: Fix windows not affecting sprites

--- a/CHANGES
+++ b/CHANGES
@@ -44,6 +44,7 @@ Bugfixes:
  - SDL: Fix SDL build when OpenGL is missing
  - ARM7: Fix timing of multiplies to use N cycles
  - GBA: Fix calls to endian-independent loadstores
+ - GBA Video: Fix windows not affecting sprites
 Misc:
  - Qt: Handle saving input settings better
  - Debugger: Free watchpoints in addition to breakpoints
