--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@ Bugfixes:
  - Qt: Cap the maximum number of multiplayer windows
  - GBA Audio: Fix audio pitch changing when adjusting buffer size
  - ARM7: Fix timing of multiplies to use N cycles
+ - GBA Video: Fix windows not affecting sprites
 Misc:
  - All: Fix sanitize-deb script to set file permissions properly if run as (fake)root
  - All: Enable static linking for Windows
