VFS: Fix line-reading to return proper values

--- a/CHANGES
+++ b/CHANGES
@@ -45,6 +45,7 @@ Bugfixes:
  - ARM7: Fix timing of multiplies to use N cycles
  - GBA: Fix calls to endian-independent loadstores
  - GBA Video: Fix windows not affecting sprites
+ - VFS: Fix line-reading to return proper values
 Misc:
  - Qt: Handle saving input settings better
  - Debugger: Free watchpoints in addition to breakpoints
