GBA: Flash erase timing changes

--- a/CHANGES
+++ b/CHANGES
@@ -80,6 +80,7 @@ Misc:
  - Qt: Make the default fullscreen binding for Windows be Alt-Enter
  - GBA Video: Refactor software renderer into separate files
  - ARM7: Add emulation for Undefined CPU mode
+ - GBA: More accurate cycle estimation for ROM prefetch and flash save chips
 
 0.2.1: (2015-05-13)
 Bugfixes:
