--- a/CHANGES
+++ b/CHANGES
@@ -82,6 +82,7 @@ Misc:
  - ARM7: Add emulation for Undefined CPU mode
  - GBA: More accurate cycle estimation for ROM prefetch and flash save chips
  - ARM7: Reduce the size of the Thumb instruction table
+ - GBA: Don't include GBACLIDebugger struct unless needed
 
 0.2.1: (2015-05-13)
 Bugfixes:
