SDL: Clean up GL context

--- a/CHANGES
+++ b/CHANGES
@@ -84,6 +84,7 @@ Misc:
  - GBA: More accurate cycle estimation for ROM prefetch and flash save chips
  - ARM7: Reduce the size of the Thumb instruction table
  - GBA: Don't include GBACLIDebugger struct unless needed
+ - SDL: Clean up GL context
 
 0.2.1: (2015-05-13)
 Bugfixes:
