--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@ Bugfixes:
  - GBA Audio: Fix audio pitch changing when adjusting buffer size
  - ARM7: Fix timing of multiplies to use N cycles
  - GBA Video: Fix windows not affecting sprites
+ - Util: Allow loading IPS patches that grow the ROM
 Misc:
  - All: Fix sanitize-deb script to set file permissions properly if run as (fake)root
  - All: Enable static linking for Windows
