GBA Audio: Fix 8-bit writes to audio channel 3 frequency

--- a/CHANGES
+++ b/CHANGES
@@ -51,6 +51,7 @@ Bugfixes:
  - GBA: Fix timing of reading from timer registers
  - Util: Allow loading IPS patches that grow the ROM
  - GBA Audio: Fix sample order in audio channel 3
+ - GBA Audio: Fix 8-bit writes to audio channel 3 frequency
 Misc:
  - Qt: Handle saving input settings better
  - Debugger: Free watchpoints in addition to breakpoints
