--- a/CHANGES
+++ b/CHANGES
@@ -22,6 +22,7 @@ Features:
  - Holdable shortcut for rewinding one frame at a time
  - Ability to boot directly into the BIOS
  - Preliminary support for yanking out the game pak while a game is running
+ - Thumb-drive mode by putting a file called portable.ini in the same folder
 Bugfixes:
  - ARM7: Fix SWI and IRQ timings
  - GBA Audio: Force audio FIFOs to 32-bit
