--- a/CHANGES
+++ b/CHANGES
@@ -99,6 +99,7 @@ Misc:
  - All: Proper handling of Unicode file paths
  - GBA Video: Slightly optimize mode 0 mosaic rendering
  - VFS: Add sync method to force syncing with backing
+ - GBA: Savedata is now synced shortly after data finishes being written
 
 0.2.1: (2015-05-13)
 Bugfixes:
