--- a/CHANGES
+++ b/CHANGES
@@ -25,6 +25,7 @@ Features:
  - Thumb-drive mode by putting a file called portable.ini in the same folder
  - Configurable display driver, between software and OpenGL
  - Undo-able savestate loading and saving
+ - Controller profiles now store shortcut settings
 Bugfixes:
  - ARM7: Fix SWI and IRQ timings
  - GBA Audio: Force audio FIFOs to 32-bit
