GBA BIOS: Implement Stop

--- a/CHANGES
+++ b/CHANGES
@@ -28,6 +28,7 @@ Features:
  - Controller profiles now store shortcut settings
  - Default controller profiles for several common controllers
  - Libretro now supports BIOS and rumble
+ - Implement BIOS call Stop, for sleep mode
 Bugfixes:
  - ARM7: Fix SWI and IRQ timings
  - GBA Audio: Force audio FIFOs to 32-bit
