Qt: Fix analog buttons not getting unmapped

--- a/CHANGES
+++ b/CHANGES
@@ -63,6 +63,7 @@ Bugfixes:
  - Qt: Fix window being too tall after exiting fullscreen
  - Qt: Fix a missing va_end call in the log handler lambda within the GameController constructor
  - GBA Cheats: Fix Pro Action Replay and GameShark issues when used together
+ - Qt: Fix analog buttons not getting unmapped
 Misc:
  - Qt: Handle saving input settings better
  - Debugger: Free watchpoints in addition to breakpoints
