--- a/CHANGES
+++ b/CHANGES
@@ -108,6 +108,7 @@ Misc:
  - GBA: Savedata is now synced shortly after data finishes being written
  - GBA Input: Allow axes and buttons to be mapped to the same key
  - GBA BIOS: Stub out SoundBias
+ - Qt: Gamepads can now have both buttons and analog axes mapped to the same key
 
 0.2.1: (2015-05-13)
 Bugfixes:
