SDL: Update URLs in documentation

--- a/doc/mgba.6
+++ b/doc/mgba.6
@@ -89,11 +89,11 @@ The default controls are as follows:
 .Sh HOMEPAGE
 .Bl -bullet
 .It
-.Lk https://endrift.com/mgba/ "mGBA homepage"
+.Lk https://mgba.io/ "mGBA homepage"
 .It
 .Lk https://github.com/mgba-emu/mgba "Development repository"
 .It
-.Lk https://endrift.com/mgba/bugs/ "Bug tracker"
+.Lk https://github.com/mgba-emu/mgba/issues "Bug tracker"
 .It
 .Lk https://forums.mgba.io/ "Message board"
 .El
