Qt: Make keymapper present more information, and space things out a bit more

--- a/CHANGES
+++ b/CHANGES
@@ -110,6 +110,7 @@ Misc:
  - GBA Input: Allow axes and buttons to be mapped to the same key
  - GBA BIOS: Stub out SoundBias
  - Qt: Gamepads can now have both buttons and analog axes mapped to the same key
+ - Qt: Increase usability of key mapper
 
 0.2.1: (2015-05-13)
 Bugfixes:
