--- a/CHANGES
+++ b/CHANGES
@@ -29,6 +29,7 @@ Features:
  - Default controller profiles for several common controllers
  - Libretro now supports BIOS, rumble and solar sensor
  - Implement BIOS call Stop, for sleep mode
+ - Automatically load patches, if found
 Bugfixes:
  - ARM7: Fix SWI and IRQ timings
  - GBA Audio: Force audio FIFOs to 32-bit
