Qt, SDL: Mention BPS in relation to -p

--- a/doc/mgba.6
+++ b/doc/mgba.6
@@ -82,7 +82,7 @@ serial I/O messages
 .El
 The default is to log warnings, errors, fatal errors, and status messages.
 .It Fl p Ar patchfile , Fl -patch Ar patchfile
-Specify a patch file in IPS or UPS format.
+Specify a patch file in BPS, IPS, or UPS format.
 .It Fl s Ar n , Fl -frameskip Ar n
 Skip every
 .Ar n
