Qt, SDL: Point out that without -b the default is set in config

--- a/doc/mgba-qt.6
+++ b/doc/mgba-qt.6
@@ -25,7 +25,8 @@ The options are as follows:
 Specify a BIOS file to use during boot.
 If this flag is omitted,
 .Nm
-will use a high\(hylevel emulated BIOS.
+will use the BIOS specified in the configuration file,
+or a high\(hylevel emulated BIOS if none is specified.
 .It Fl l Ar loglevel
 Log messages during emulation.
 .Ar loglevel
