--- a/doc/mgba.6
+++ b/doc/mgba.6
@@ -40,7 +40,8 @@ Scale the window 6\(mu.
 Specify a BIOS file to use during boot.
 If this flag is omitted,
 .Nm
-will use a high\(hylevel emulated BIOS.
+will use the BIOS specified in the configuration file,
+or a high\(hylevel emulated BIOS if none is specified.
 .It Fl c Ar cheatfile , Fl -cheats Ar cheatfile
 Apply cheat codes from
 .Ar cheatfile .
