Qt, SDL: Add a FILES section to the manuals

--- a/doc/mgba-qt.6
+++ b/doc/mgba-qt.6
@@ -83,6 +83,17 @@ The default controls are as follows:
 .It Frame advance
 .Ao Cm Ctrl Ac Ns \(hy Ns Cm n
 .El
+.Sh FILES
+.Bl -tag -width ~/.config/mgba/config.ini -compact
+.It Pa ~/.config/mgba/config.ini
+Default
+.Xr mgba 6
+configuration file.
+.It Pa ~/.config/mgba/qt.ini
+Default
+.Nm mgba-qt
+configuration file.
+.El
 .Sh AUTHORS
 .An Jeffrey Pfau Aq Mt jeffrey@endrift.com
 .Sh HOMEPAGE
