--- a/doc/mgba.6
+++ b/doc/mgba.6
@@ -219,6 +219,13 @@ from
 .It Cm \&!\ \&
 Break into the attached debugger.
 .El
+.Sh FILES
+.Bl -tag -width ~/.config/mgba/config.ini -compact
+.It Pa ~/.config/mgba/config.ini
+Default
+.Nm
+configuration file.
+.El
 .Sh AUTHORS
 .An Jeffrey Pfau Aq Mt jeffrey@endrift.com
 .Sh HOMEPAGE
