Qt, SDL: Tweak wording for stub loglevels

--- a/doc/mgba-qt.6
+++ b/doc/mgba-qt.6
@@ -43,7 +43,7 @@ informative messages
 .It 16
 debugging messages
 .It 32
-stub messages
+stub messages for unimplemented features
 .It 256
 in\(hygame errors
 .It 512
