SDL: Add missed markup in manual

--- a/doc/mgba.6
+++ b/doc/mgba.6
@@ -134,7 +134,7 @@ or the current CPU mode \(en at
 .Ar address .
 .It Cm c Ns Op Cm ontinue
 Continue execution.
-.It Cm d Ns Oo elete Oc Ar address
+.It Cm d Ns Oo Cm elete Oc Ar address
 Delete a breakpoint at
 .Ar address .
 .It Cm dis Ns Oo Cm asm Oc Ar address Op Ar count
