Qt, SDL: Document portable.ini and its effects

--- a/doc/mgba-qt.6
+++ b/doc/mgba-qt.6
@@ -93,6 +93,15 @@ configuration file.
 Default
 .Nm mgba-qt
 configuration file.
+.It Pa portable.ini
+If this file exists in the current directory,
+.Nm
+will read
+.Pa config.ini
+and
+.Pa qt.ini
+from the current directory instead of
+.Pa ~/.config/mgba .
 .El
 .Sh AUTHORS
 .An Jeffrey Pfau Aq Mt jeffrey@endrift.com
