--- a/doc/mgba.6
+++ b/doc/mgba.6
@@ -225,6 +225,13 @@ Break into the attached debugger.
 Default
 .Nm
 configuration file.
+.It Pa portable.ini
+If this file exists in the current directory,
+.Nm
+will read
+.Pa config.ini
+from the current directory instead of
+.Pa ~/.config/mgba .
 .El
 .Sh AUTHORS
 .An Jeffrey Pfau Aq Mt jeffrey@endrift.com
