SDL: Correct the documentation of the info/status commands

--- a/doc/mgba.6
+++ b/doc/mgba.6
@@ -163,7 +163,8 @@ is not specified, only disassemble the current address.
 Print help.
 .It Cm i Ns Op Cm nfo
 .It Cm status
-Print the current contents of general\(hypurpose registers.
+Print the current contents of general\(hypurpose registers and the current
+program state register, and disassemble the current instruction.
 .It Cm n Ns Op Cm ext
 Execute the next instruction.
 .It Cm p Ns Oo Cm rint Oc Ar value ...
