SDL: Document required argument to w/r

--- a/doc/mgba.6
+++ b/doc/mgba.6
@@ -208,8 +208,10 @@ or word
 .Pq Ql /4
 to
 .Ar address .
-.It Cm w/r Ar register
-Write a word to
+.It Cm w/r Ar register data
+Write
+.Ar data
+as a word to
 .Ar register .
 .It Cm x/1 Ar address Op Ar count
 .It Cm x/2 Ar address Op Ar count
