--- a/CHANGES
+++ b/CHANGES
@@ -31,6 +31,7 @@ Features:
  - Implement BIOS call Stop, for sleep mode
  - Automatically load patches, if found
  - Improved video synchronization
+ - Configurable audio output sample rate
 Bugfixes:
  - ARM7: Fix SWI and IRQ timings
  - GBA Audio: Force audio FIFOs to 32-bit
