--- a/CHANGES
+++ b/CHANGES
@@ -121,6 +121,7 @@ Misc:
  - Qt: Show checkmark for window sizes
  - Qt: Set window path to loaded ROM
  - GBA Memory: Run multiple DMAs in a tight loop if they all occur before present
+ - GBA Audio: Process multiple audio events at once, if necessary
 
 0.2.1: (2015-05-13)
 Bugfixes:
