Util: Fix formatting of floats

--- a/CHANGES
+++ b/CHANGES
@@ -72,6 +72,7 @@ Bugfixes:
  - Qt: Fix crashes on Windows by using using QMetaObject to do cross-thread calls
  - GBA Video: Fix timing on first scanline
  - GBA: Ensure cycles never go negative
+ - Util: Fix formatting of floats
 Misc:
  - Qt: Handle saving input settings better
  - Debugger: Free watchpoints in addition to breakpoints
