--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.4.0: (Future)
+Misc:
+ - Qt: Window size command line options are now supported
+
 0.3.0: (2015-08-16)
 Features:
  - Ability to hide individual background layers, or OBJs
