Qt: Windows no longer spawn in the top left on first launch

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 0.4.0: (Future)
+Bugfixes:
+ - Qt: Windows no longer spawn in the top left on first launch
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
