Qt: Remove useless help icons in dialogs
Conflicts:
	CHANGES

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,8 @@ Bugfixes:
  - Qt: Windows no longer spawn in the top left on first launch
  - Qt: Fix install path of XDG desktop file with DESTDIR
  - Qt: Fix drag and drop on Windows
+Misc:
+ - Qt: Remove useless help icons in dialogs
 
 0.3.0: (2015-08-16)
 Features:
