GBA: Better memory handling with PNG savestates

--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@ Misc:
  - ARM7: Combine shifter-immediate and shifter-register functions to reduce binary size
  - SDL: Support fullscreen in SDL 1.2
  - GBA: Attempting to save a screenshot-style savestate should be allowed without libpng
+ - GBA: Better memory handling with PNG savestates
 
 0.3.0: (2015-08-16)
 Features:
