GBA Audio: Allow GBAAVStream to have no video callback

--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@ Misc:
  - Qt: Remove useless help icons in dialogs
  - GBA: Attempting to save a screenshot-style savestate should be allowed without libpng
  - GBA: Better memory handling with PNG savestates
+ - GBA Audio: Allow GBAAVStream to have no video callback
 
 0.3.0: (2015-08-16)
 Features:
